force body to have white bg, protecting against dark mode bugs, for #66 (#314)
* force body to have white bg, protecting against dark mode bugs, for #66

* apply bgcolor to race embed

---------

--- a/src/css/base.less
+++ b/src/css/base.less
@@ -22,6 +22,7 @@ body {
   font-family: @sans;
   font-size: 14px;
   line-height: 1.4;
+  background-color: #fff;
 }
 
 img, svg {
