--- a/src/css/race-embed.less
+++ b/src/css/race-embed.less
@@ -1,4 +1,5 @@
-@import "values";
+// @import "values";
+@import "base";
 @import "../js/components/results-table/results-table";
 @import "../js/components/test-banner/test-banner";
 
@@ -25,7 +26,9 @@
 }
 
 .source-footnote {
-    font-family: @sans;
-    font-size: 12px;
-    color: #787878;
+  font-family: @sans;
+  font-size: 12px;
+  color: #787878;
+
+  a { text-decoration: none; }
 }
